--- a/cxtruecolor.html
+++ b/cxtruecolor.html
@@ -841,11 +841,11 @@ function main() {
     title="checkTrueColorSupport(): bool"><wbr />check<wbr />True<wbr />Color<wbr />Support<span class="attachedType" style="visibility:hidden"></span></a></li>
   <li><a class="reference" href="#getCxTrueColorSet%2Cint%2Cint%2Cint%2Cbool"
     title="getCxTrueColorSet(min: int = 0; max: int = 888; step: int = 12; flag48: bool = false): bool"><wbr />get<wbr />Cx<wbr />True<wbr />Color<wbr />Set<span class="attachedType" style="visibility:hidden"></span></a></li>
-  <li><a class="reference" href="#color38%2Cseq%5Bstring%5D"
+  <li><a class="reference" href="#color38%2Cseq%5BT%5D%5Bstring%5D"
     title="color38(cxTrueCol: seq[string]): int"><wbr />color38<span class="attachedType" style="visibility:hidden"></span></a></li>
-  <li><a class="reference" href="#color48%2Cseq%5Bstring%5D"
+  <li><a class="reference" href="#color48%2Cseq%5BT%5D%5Bstring%5D"
     title="color48(cxTrueCol: seq[string]): int"><wbr />color48<span class="attachedType" style="visibility:hidden"></span></a></li>
-  <li><a class="reference" href="#color3848%2Cseq%5Bstring%5D"
+  <li><a class="reference" href="#color3848%2Cseq%5BT%5D%5Bstring%5D"
     title="color3848(cxTrueCol: seq[string]): int"><wbr />color3848<span class="attachedType" style="visibility:hidden"></span></a></li>
   <li><a class="reference" href="#rndTrueCol"
     title="rndTrueCol(): auto"><wbr />rnd<wbr />True<wbr />Col<span class="attachedType" style="visibility:hidden"></span></a></li>
@@ -954,20 +954,20 @@ function main() {
 
 
 </dd>
-<a id="color38,seq[string]"></a>
-<dt><pre><span class="Keyword">proc</span> <a href="#color38%2Cseq%5Bstring%5D"><span class="Identifier">color38</span></a><span class="Other">(</span><span class="Identifier">cxTrueCol</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">string</span><span class="Other">]</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">int</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">inline</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+<a id="color38,seq[T][string]"></a>
+<dt><pre><span class="Keyword">proc</span> <a href="#color38%2Cseq%5BT%5D%5Bstring%5D"><span class="Identifier">color38</span></a><span class="Other">(</span><span class="Identifier">cxTrueCol</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">string</span><span class="Other">]</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">int</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">inline</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
 
 </dd>
-<a id="color48,seq[string]"></a>
-<dt><pre><span class="Keyword">proc</span> <a href="#color48%2Cseq%5Bstring%5D"><span class="Identifier">color48</span></a><span class="Other">(</span><span class="Identifier">cxTrueCol</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">string</span><span class="Other">]</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">int</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">inline</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+<a id="color48,seq[T][string]"></a>
+<dt><pre><span class="Keyword">proc</span> <a href="#color48%2Cseq%5BT%5D%5Bstring%5D"><span class="Identifier">color48</span></a><span class="Other">(</span><span class="Identifier">cxTrueCol</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">string</span><span class="Other">]</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">int</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">inline</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
 
 </dd>
-<a id="color3848,seq[string]"></a>
-<dt><pre><span class="Keyword">proc</span> <a href="#color3848%2Cseq%5Bstring%5D"><span class="Identifier">color3848</span></a><span class="Other">(</span><span class="Identifier">cxTrueCol</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">string</span><span class="Other">]</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">int</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">inline</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+<a id="color3848,seq[T][string]"></a>
+<dt><pre><span class="Keyword">proc</span> <a href="#color3848%2Cseq%5BT%5D%5Bstring%5D"><span class="Identifier">color3848</span></a><span class="Other">(</span><span class="Identifier">cxTrueCol</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">string</span><span class="Other">]</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">int</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">inline</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
 
@@ -1037,7 +1037,7 @@ function main() {
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small>Made with Nim. Generated: 2019-02-14 03:32:39 UTC</small>
+        <small>Made with Nim. Generated: 2019-03-01 08:55:01 UTC</small>
       </div>
     </div>
   </div>
