--- a/cxstats.html
+++ b/cxstats.html
@@ -345,11 +345,11 @@ dl {
 
 dt {
   margin-bottom: -0.5em;
-  margin-left: 0.5em; }
+  margin-left: 0.0em; }
 
 dd {
-  margin-left: 0.5em;
-  margin-bottom: 2.5em;
+  margin-left: 2.0em;
+  margin-bottom: 3.0em;
   margin-top: 0.5em; }
 
 
@@ -819,6 +819,8 @@ function main() {
     title="showRegression(rr: RunningRegress; n: int = 5; xpos: int = 1)"><wbr />show<wbr />Regression<span class="attachedType" style="visibility:hidden"></span></a></li>
   <li><a class="reference" href="#zscore%2Cseq%5BT%5D%5BSomeNumber%5D"
     title="zscore(data: seq[SomeNumber]): seq[float]"><wbr />zscore<span class="attachedType" style="visibility:hidden"></span></a></li>
+  <li><a class="reference" href="#rolling_zscore%2Cseq%5BT%5D%5Bfloat%5D%2Cseq%5BT%5D%5Bfloat%5D%2Cfloat"
+    title="rolling_zscore(data: seq[float]; observed_window: seq[float]; decay: float = 0.9): float"><wbr />rolling_<wbr />zscore<span class="attachedType" style="visibility:hidden"></span></a></li>
 
   </ul>
 </li>
@@ -837,13 +839,13 @@ Status      : stable
 
 License     : MIT opensource
 
-Latest      : 2019-01-09
+Latest      : 2019-03-15
 
 Compiler    : Nim &gt;= 0.19.x dev branch
 
 OS          : Linux
 
-Description : provides functions pertaining to statistcs and calculations</pre>
+Description : provides some functions pertaining to statistcs and calculations</pre>
 </p>
   <div class="section" id="6">
 <h1><a class="toc-backref" href="#6">Imports</a></h1>
@@ -926,6 +928,13 @@ Description : provides functions pertaining to statistcs and calculations</pre>
 <span class="Identifier">doFinish</span><span class="Punctuation">(</span><span class="Punctuation">)</span> </pre>
 
 </dd>
+<a id="rolling_zscore,seq[T][float],seq[T][float],float"></a>
+<dt><pre><span class="Keyword">proc</span> <a href="#rolling_zscore%2Cseq%5BT%5D%5Bfloat%5D%2Cseq%5BT%5D%5Bfloat%5D%2Cfloat"><span class="Identifier">rolling_zscore</span></a><span class="Other">(</span><span class="Identifier">data</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">float</span><span class="Other">]</span><span class="Other">;</span> <span class="Identifier">observed_window</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">float</span><span class="Other">]</span><span class="Other">;</span> <span class="Identifier">decay</span><span class="Other">:</span> <span class="Identifier">float</span> <span class="Other">=</span> <span class="FloatNumber">0.9</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">float</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma">
+    <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+<dd>
+
+
+</dd>
 
 </dl></div>
 
@@ -936,7 +945,7 @@ Description : provides functions pertaining to statistcs and calculations</pre>
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small>Made with Nim. Generated: 2019-03-01 08:55:05 UTC</small>
+        <small>Made with Nim. Generated: 2019-03-15 13:43:12 UTC</small>
       </div>
     </div>
   </div>
