--- a/cxutils.html
+++ b/cxutils.html
@@ -345,11 +345,11 @@ dl {
 
 dt {
   margin-bottom: -0.5em;
-  margin-left: 0.5em; }
+  margin-left: 0.0em; }
 
 dd {
-  margin-left: 0.5em;
-  margin-bottom: 2.5em;
+  margin-left: 2.0em;
+  margin-bottom: 3.0em;
   margin-top: 0.5em; }
 
 
@@ -1585,8 +1585,7 @@ spiralBoxy2   uses boxy2
 <a id="genMacAddress"></a>
 <dt><pre><span class="Keyword">proc</span> <a href="#genMacAddress"><span class="Identifier">genMacAddress</span></a><span class="Other">(</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">string</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">TimeEffect</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
-generates a random MacAddress<blockquote><p>loopy(1..10,echo genMacAddress())</p></blockquote>
-
+generates a random MacAddress<pre class="listing"><span class="Identifier">loopy</span><span class="Punctuation">(</span><span class="FloatNumber">1.</span><span class="Operator">.</span><span class="DecNumber">10</span><span class="Punctuation">,</span><span class="Identifier">echo</span> <span class="Identifier">genMacAddress</span><span class="Punctuation">(</span><span class="Punctuation">)</span><span class="Punctuation">)</span></pre>
 
 </dd>
 <a id="quickPw"></a>
@@ -1616,7 +1615,7 @@ generates a random MacAddress<blockquote><p>loopy(1..10,echo genMacAddress())</p
 <a id="getGitHash"></a>
 <dt><pre><span class="Keyword">proc</span> <a href="#getGitHash"><span class="Identifier">getGitHash</span></a><span class="Other">(</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">string</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
-getGitHash to get the git hash during compile
+getGitHash to get the git hash during compile 
 
 </dd>
 
@@ -1636,12 +1635,10 @@ reverse iterator<pre class="listing"><span class="Keyword">let</span> <span clas
 <dd>
 <p>span</p>
 <p>iterator for strings</p>
-<blockquote><p>let s = &quot;.something&quot;<dl class="docutils"><dt>for c in s.span(1, ^1):</dt>
-<dd>print c</dd>
-</dl>
-<p>echo()</p>
-</p></blockquote>
-
+<pre class="listing"><span class="Keyword">let</span> <span class="Identifier">s</span> <span class="Operator">=</span> <span class="StringLit">&quot;.something&quot;</span>
+<span class="Keyword">for</span> <span class="Identifier">c</span> <span class="Keyword">in</span> <span class="Identifier">s</span><span class="Operator">.</span><span class="Identifier">span</span><span class="Punctuation">(</span><span class="DecNumber">1</span><span class="Punctuation">,</span> <span class="Operator">^</span><span class="DecNumber">1</span><span class="Punctuation">)</span><span class="Punctuation">:</span>
+    <span class="Identifier">print</span> <span class="Identifier">c</span>
+<span class="Identifier">echo</span><span class="Punctuation">(</span><span class="Punctuation">)</span></pre>
 
 </dd>
 
@@ -1691,7 +1688,7 @@ reverse iterator<pre class="listing"><span class="Keyword">let</span> <span clas
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small>Made with Nim. Generated: 2019-03-01 08:54:54 UTC</small>
+        <small>Made with Nim. Generated: 2019-03-15 13:43:01 UTC</small>
       </div>
     </div>
   </div>
